<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.weather.MainFragment"
        android:label="@string/weather_head"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_currentWeatherFragment"
            app:destination="@id/currentWeatherFragment" />
        <action
            android:id="@+id/action_mainFragment_to_weatherHistoryFragment"
            app:destination="@id/weatherHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/currentWeatherFragment"
        android:name="com.example.weather.CurrentWeatherFragment"
        android:label="@string/CurrentWeather_head"
        tools:layout="@layout/fragment_current_weather" >
        <action
            android:id="@+id/action_currentWeatherFragment_to_weatherHistoryFragment2"
            app:destination="@id/weatherHistoryFragment"
            app:popUpTo="@id/currentWeatherFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/weatherHistoryFragment"
        android:name="com.example.weather.WeatherHistoryFragment"
        android:label="@string/WeatherHistory_head"
        tools:layout="@layout/fragment_weather_history" >
        <action
            android:id="@+id/action_weatherHistoryFragment_to_currentWeatherFragment2"
            app:destination="@id/currentWeatherFragment"
            app:popUpTo="@id/weatherHistoryFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>