<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/clouds_image"
            android:layout_width="99dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toTopOf="@+id/Weather_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_partly_cloudy_day" />

        <TextView
            android:id="@+id/Weather_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clouds_image"
            app:layout_constraintVertical_bias="0.585" />

        <Button
            android:id="@+id/currentWeatherbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/CurrentWeather_head"
            app:layout_constraintBottom_toTopOf="@+id/weatherHistorybutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Weather_text"
            app:layout_constraintVertical_bias="0.38"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/weatherHistorybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/WeatherForecast_head"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentWeatherbutton" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>