<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.weather.CurrentWeatherFragment">
    <data>
        <variable
            name="CurrentViewModel"
            type="com.example.weather.ViewModelCurrentWeatherFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CurrentWeatherconstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/currentWeather_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/WeatherForecast_head"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Location_text" />

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/Image"
            tools:src="@drawable/a01d"
            app:layout_constraintBottom_toTopOf="@+id/Temprature_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/Temprature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:text="@{CurrentViewModel.temp}"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/Type_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_view"
            tools:text="35° C" />

        <TextView
            android:id="@+id/Type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{CurrentViewModel.property.currentData.get(0).weather.description}"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/Location_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Temprature_text"
            app:layout_constraintVertical_bias="0.23000002"
            tools:text="Sunny" />

        <TextView
            android:id="@+id/Location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"
            android:textSize="24sp"
            android:text="@{CurrentViewModel.location}"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/currentWeather_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Type_text"
            tools:text="London,Uk" />

        <ImageView
            android:id="@+id/statusImageView"
            android:layout_width="224dp"
            android:layout_height="229dp"
            android:backgroundTint="@color/material_on_surface_disabled"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_connection_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:marsApiStatus="@{CurrentViewModel.status}"
            tools:background="@color/primaryTextColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>